lesson ng-content & ng-container(template)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,11 @@
-<app-header></app-header>
-<app-wrapper></app-wrapper>
+<!-- <app-header></app-header>
+< -->
+
+
+<app-container>
+
+  <!-- <app-wrapper></app-wrapper> -->
+
+
+  <app-template-exaple></app-template-exaple>
+</app-container>
