--- a/src/app/core/student-list/student-list.component.html
+++ b/src/app/core/student-list/student-list.component.html
@@ -1,25 +1,14 @@
-<!-- <ul>
-  <li>
-    {{ students[0].name }} {{students[0].lastName}} {{students[0].age}}
-  </li>
-</ul> -->
-<!-- <ul>
-  <li
-    *ngFor="let student of students"
-    class="list-item"
-    (click)="selectStutent(student.id)"
-  >
-    {{ getFullName(student) }}
-  </li
-  >
-</ul> -->
+<div class="container">
+  <mat-list role="list">
+    <mat-list-item
+      *ngFor="let student of students"
+      role="listitem"
+      (click)="selectStutent(student.id)"
+    >
+      {{ getFullName(student) }}
+    </mat-list-item>
+  </mat-list>
 
-<mat-list role="list">
-  <mat-list-item
-    *ngFor="let student of students"
-    role="listitem"
-    (click)="selectStutent(student.id)"
-  >
-    {{ getFullName(student) }}
-  </mat-list-item>
-</mat-list>
+  <ng-content></ng-content>
+</div>
+
