--- a/src/app/core/student-list/student-list.component.scss
+++ b/src/app/core/student-list/student-list.component.scss
@@ -8,3 +8,12 @@
     background-color: rgba(0,0,0, 0.4);
   }
 }
+
+.container {
+  display: flex;
+  .template {
+    width: 50px;
+    height: 50px;
+    background-color: blue;
+  }
+}
