--- a/src/app/core/wrapper/wrapper.component.scss
+++ b/src/app/core/wrapper/wrapper.component.scss
@@ -2,3 +2,13 @@
   font-size: 30px;
   font-family: sans-serif;
 }
+
+.info {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 400px;
+  background-color: burlywood;
+  margin-left: 30px;
+
+}
